# KillTeamAI

./: LICENSE  README.md  pyproject.toml  scratch.py
kill_team/board/: base.py
kill_team/equipment/: base.py
kill_team/operatives/: base.py
