[tool.poetry]
name = "killteamai"
version = "0.1.0"
description = ""
authors = ["Edward Parry <red_parry@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "0.20.17"
matplotlib = "3.8.3"
torch = {version = "2.2.2", source="torch"}
torchaudio = {version = "2.2.2", source="torch"}
torchvision = {version = "0.17.2", source="torch"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

